--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -3,12 +3,13 @@
 html {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
+  max-width: 2000px;
 }
 
 body {
   margin: 0;
   box-sizing: content-box;
-  max-width: 100vw;
+  max-width: 2000px;
   width: 100vw;
   background-color: variables.$tan;
 }
@@ -60,3 +61,5 @@ section:not([name="carrousel"], [name="swiper"]) {
   margin: auto;
   padding: 40px;
 }
+
+
