--- a/partials/_card.scss
+++ b/partials/_card.scss
@@ -1,9 +1,11 @@
 @use "variables";
 
+
 .section-card {
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr;
   justify-content: center;
+  
  
 
   &__card {
@@ -11,7 +13,7 @@
     background-color: variables.$white;
     transition: 0.3s;
     margin: 15px;
-    height: 50vh;
+    height: 95%;
     max-width: 500px;
     min-width: 480px;
     &:hover{
