--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -6,7 +6,7 @@
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
-        width: 100vw;
+        width: 100%;
         height: 10vh;
         background: variables.$pink;
         color: variables.$ldlRed;
