--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -8,8 +8,12 @@ footer {
   color: white;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  justify-items: stretch;
-  align-items: center;
+  h1{
+    margin-top: 30px;
+    margin-bottom:30px;
+    text-align: center;
+  }
+  
 }
 
 footer:last-of-type {
@@ -44,7 +48,7 @@ p{
 .footer-wrapper {
   display: grid;
   justify-items: center;
-  width: 100vw;
+  width: 100%;
   grid-template-columns: fit-content;
   grid-template-rows: 1fr auto;
   justify-self: stretch;
@@ -141,16 +145,15 @@ p{
   }
 
   &__partner {
-    max-width: 1500px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    /* Set direction to row */
-    justify-content: center;
-    /* Center items horizontally */
-    align-items: center;
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
     img{
+      justify-self: center;
+      align-self: center;
       margin: 10px;
+      width:200px;
     }
   }
 
@@ -240,7 +243,7 @@ p{
     padding: 55px 0;
     color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+   
     justify-items: stretch;
     align-items: center;
   }
@@ -264,7 +267,7 @@ p{
   .footer-wrapper {
     display: grid;
     justify-items: center;
-    width: 100vw;
+    width: 100%;
     grid-template-columns: fit-content;
     grid-template-rows: 1fr auto;
     justify-self: stretch;
@@ -381,6 +384,18 @@ p{
         padding: 10px;
         color: white;
         text-align: center;
+      }
+    }
+    &__partner {
+      max-width: 100vw;
+      display: grid;
+      grid-template-columns: auto auto auto;
+      grid-template-rows: auto;
+      img{
+        justify-self: center;
+        align-self: center;
+        margin: 10px;
+        width:200px;
       }
     }
   }
