--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
 html {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
+  max-width: 2000px;
 }
 
 body {
   margin: 0;
   box-sizing: content-box;
-  max-width: 100vw;
+  max-width: 2000px;
   width: 100vw;
   background-color: #e2ded4;
 }
@@ -62,7 +63,7 @@ section:not([name=carrousel], [name=swiper]) {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     background: #f8dde5;
     color: #b20838;
@@ -316,7 +317,7 @@ section:not([name=carrousel], [name=swiper]) {
   background-color: #fdfdff;
   transition: 0.3s;
   margin: 15px;
-  height: 50vh;
+  height: 95%;
   max-width: 500px;
   min-width: 480px;
 }
@@ -351,8 +352,11 @@ footer {
   color: white;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  justify-items: stretch;
-  align-items: center;
+}
+footer h1 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 footer:last-of-type {
@@ -388,7 +392,7 @@ p {
 .footer-wrapper {
   display: grid;
   justify-items: center;
-  width: 100vw;
+  width: 100%;
   grid-template-columns: fit-content;
   grid-template-rows: 1fr auto;
   justify-self: stretch;
@@ -478,17 +482,16 @@ p {
   align-items: center;
 }
 .footer-wrapper__partner {
-  max-width: 1500px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  /* Set direction to row */
-  justify-content: center;
-  /* Center items horizontally */
-  align-items: center;
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
 }
 .footer-wrapper__partner img {
+  justify-self: center;
+  align-self: center;
   margin: 10px;
+  width: 200px;
 }
 .footer-wrapper__info {
   text-align: right;
@@ -565,7 +568,6 @@ p {
     padding: 55px 0;
     color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     justify-items: stretch;
     align-items: center;
   }
@@ -585,7 +587,7 @@ p {
   .footer-wrapper {
     display: grid;
     justify-items: center;
-    width: 100vw;
+    width: 100%;
     grid-template-columns: fit-content;
     grid-template-rows: 1fr auto;
     justify-self: stretch;
@@ -680,6 +682,18 @@ p {
     padding: 10px;
     color: white;
     text-align: center;
+  }
+  .footer-wrapper__partner {
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+  }
+  .footer-wrapper__partner img {
+    justify-self: center;
+    align-self: center;
+    margin: 10px;
+    width: 200px;
   }
 }
 @media (min-width: 1000px) {
@@ -841,6 +855,14 @@ section {
   font-size: 20px;
 }
 
+@media (min-width: 375px) {
+  article.__description-don-wrapper p {
+    text-align: left;
+    font-size: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
 .swiper {
   width: 100vw;
   height: 60vh;
