--- a/partials/_luttes.scss
+++ b/partials/_luttes.scss
@@ -65,6 +65,7 @@ section{
       height: auto;
       right: 0;
       left: 0;
+      bottom:0;
       align-self: baseline;
     }
   }
@@ -76,7 +77,7 @@ section{
       img{
         left: 0;
         z-index: 1;
-        top:100px;
+        top:200px;
       }
     }
   }
@@ -91,8 +92,8 @@ section{
         height: auto;
         right: 0;
         left: 100px;
-        top:0;
         align-self: baseline;
+        top:170px;
       }
     }
   }
@@ -107,8 +108,8 @@ section{
         height: auto;
         right: 0;
         left: 400px;
-        top:0;
         align-self: baseline;
+        top:100px;
       }
     }
   }
