--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -7,10 +7,10 @@
 body {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
-  max-width: 2000px;
+  max-width: 100%;
   margin: 0;
   box-sizing: content-box;
-  max-width: 2000px;
+  max-width: 100%;
   width: 100vw;
   background-color: variables.$tan;
 }
