--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -6,7 +6,8 @@
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
-        width: 100%;
+        max-width:100%;
+        width: 100vw;
         height: 10vh;
         background: variables.$pink;
         color: variables.$ldlRed;
