--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -2,7 +2,7 @@
 
 footer {
   background-color: variables.$dark;
-  width: 100%;
+  width: 100vw;
   text-align: left;
   padding: 55px 0;
   color: white;
