--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@
 body {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
-  max-width: 2000px;
+  max-width: 100%;
   margin: 0;
   box-sizing: content-box;
-  max-width: 2000px;
+  max-width: 100%;
   width: 100vw;
   background-color: #e2ded4;
 }
@@ -64,7 +64,8 @@ section:not([name=carrousel], [name=swiper]) {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    width: 100%;
+    max-width: 100%;
+    width: 100vw;
     height: 10vh;
     background: #f8dde5;
     color: #b20838;
@@ -347,7 +348,7 @@ section:not([name=carrousel], [name=swiper]) {
 }
 footer {
   background-color: #092327;
-  width: 100%;
+  width: 100vw;
   text-align: left;
   padding: 55px 0;
   color: white;
