--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -3,6 +3,7 @@
 footer {
   background-color: variables.$dark;
   width: 100vw;
+  max-width:100%;
   text-align: left;
   padding: 55px 0;
   color: white;
@@ -48,7 +49,8 @@ p{
 .footer-wrapper {
   display: grid;
   justify-items: center;
-  width: 100%;
+  width: 100vw;
+  max-width:100%;
   grid-template-columns: fit-content;
   grid-template-rows: 1fr auto;
   justify-self: stretch;
@@ -238,7 +240,8 @@ p{
 @media (min-width: 768px) {
   footer {
     background-color: variables.$dark;
-    width: 100%;
+    max-width:100%;
+    width: 100vw;
     text-align: left;
     padding: 55px 0;
     color: white;
@@ -267,7 +270,8 @@ p{
   .footer-wrapper {
     display: grid;
     justify-items: center;
-    width: 100%;
+    max-width: 100%;
+    width: 100vw;
     grid-template-columns: fit-content;
     grid-template-rows: 1fr auto;
     justify-self: stretch;
