--- a/partials/_disclaimer.scss
+++ b/partials/_disclaimer.scss
@@ -5,7 +5,6 @@
     .disclaimer{
         display: grid;
         grid-template-columns: auto auto;
-        grid-template-rows: auto auto;
         max-width:100%;
         width: 100vw;
         height: 10vh;
@@ -21,10 +20,11 @@
             margin-left: 2vw;
             font-size: 15px;
             vertical-align: middle;
+            align-self: center;
         }
         i{
-            margin-top: 2vh;
-            margin-bottom: 8vw;
+          
+           
             margin-right: 2vw;;
             align-self: center;
             justify-self: center;
@@ -38,8 +38,9 @@
 
 @media(min-width: 768px){
     p{
-        margin-top:4vh;
+        align-self: center;
         margin-left: 4vw;
+        margin:0;
     }
     i{
         margin-left: 1vw;
@@ -49,10 +50,14 @@
 @media(min-width: 1400px){
  .disclaimer{
     grid-template-columns: auto 10vw;
-    grid-template-rows: auto auto;
+    
  }
+ p{
+    align-self:center;
+    margin:0;
+}
  i{
-    align-self: end;
+    align-self: center;
  }
  
     
