--- a/partials/_swiper.scss
+++ b/partials/_swiper.scss
@@ -34,6 +34,7 @@
                 height:60vh;
                 position: absolute;
                 display:flex;
+                
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
@@ -61,6 +62,7 @@
                 }
                 p{
                     color:variables.$white;
+                   
                     width:50vw;
                     font-size: 18px;
                     
@@ -78,6 +80,10 @@
                     align-items: center;
                     button{
                         margin-top:20px;
+                        box-shadow: 3px 5px 14px 1px black;
+                        &:hover{
+                            box-shadow: 3px 5px 14px 4px black;
+                        }
                     }
                 }
                 
