--- a/partials/_card.scss
+++ b/partials/_card.scss
@@ -4,7 +4,7 @@
 .section-card {
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr;
-  justify-content: center;
+  justify-content: flex-start;
   
  
 
@@ -25,6 +25,10 @@
   }
   &__container {
     padding: 2px 16px;
+  }
+  &__button{
+    margin-top: 20px;
+
   }
 }
 
