--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ button {
   border: none;
   border: solid 2px #fdfdff;
   padding: 15px;
+  box-shadow: 3px 1px 10px 1px rgb(65, 64, 64);
   cursor: pointer; /* Safari */
   transition-duration: 0.4s;
   text-decoration: none;
@@ -332,6 +333,7 @@ section:not([name=carrousel], [name=swiper]) {
 }
 .section-card__card:hover {
   box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 }
 .section-card__card img {
   width: 100%;
