--- a/partials/_luttes.scss
+++ b/partials/_luttes.scss
@@ -42,6 +42,10 @@ section{
           background-color: variables.$ldlRed;
           padding: 10px;
           border-radius: 15%;
+          transition: 0.3s ease-in-out;
+          &:hover{
+            background-color: rgb(68, 2, 2);
+          }
         }
         &:hover {
           background-color: #e6e4e4;
