--- a/partials/_luttes.scss
+++ b/partials/_luttes.scss
@@ -102,7 +102,7 @@ section{
         }
       }
     }
-    &__right-section{
+    .__right-section{
       img {
         position:absolute;
         width: 600px;
