--- a/partials/_card.scss
+++ b/partials/_card.scss
@@ -4,7 +4,7 @@
 .section-card {
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr;
-  justify-content: flex-start;
+  justify-content: center;
   margin:0;
   
   
@@ -20,6 +20,7 @@
     height: 95%;
     max-width: 500px;
     min-width: 480px;
+
     
     
     &:hover{
@@ -34,10 +35,21 @@
   &__container {
     padding: 2px 16px;
   }
-  &__button{
+  
+ 
+}
+.cardbouton{
+  max-width:100%;
+  width:100vw;
+  display:flex;
+  justify-content: center;
+  button{
+    
     margin-top: 20px;
+    
 
   }
+
 }
 
 @media (min-width: 1400px) {
@@ -47,9 +59,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto;
     flex-direction: row;
-    button{
-      margin:10px;
-      align-self: center;
-    }
+    
   }
 }
