--- a/partials/_card.scss
+++ b/partials/_card.scss
@@ -43,6 +43,7 @@
   width:100vw;
   display:flex;
   justify-content: center;
+  
   button{
     
     margin-top: 20px;
@@ -52,13 +53,60 @@
 
 }
 
-@media (min-width: 1400px) {
+#barrecarte{
+  margin-left:30%;
+}
+#textcarte{
+  text-align: center;
+}
+
+
+
+
+@media (min-width: 768px) {
   .section-card {
+    &__card{
+      max-width: 500px;
+      min-width: 180px;
+    }
+    
     display: grid;
-    align-items: center;
+    
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto;
     flex-direction: row;
     
   }
+  .cardbouton{
+    
+    justify-content: flex-start;
+    
+  
+  }
+  #barrecarte{
+    margin-left: 0;
+  }
+  #textcarte{
+    text-align: start;
+  }
+}
+
+
+@media(min-width:1500px) {
+
+  .section-card{
+    &__card{
+      max-width: 500px;
+      min-width: 480px;
+    }
+  }
+
+  
+  .cardbouton{
+    
+    justify-content: flex-start;
+    
+  
+  }
+  
 }
