--- a/partials/_news.scss
+++ b/partials/_news.scss
@@ -1,25 +1,73 @@
 @use "variables";
 
-.news-wrapper{
+.news-wrapper {
     margin: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    &__news{
-        width: 100%;
-        ul{
-            width: 100vw;
-        }
-        li{
+
+    ul.news-wrapper__list {
+        display: flex;
+        flex-direction: column;
+
+        li {
             list-style-type: none;
             padding-top: 2rem;
             padding-bottom: 2rem;
             text-decoration: underline;
-            
-        &:nth-child(odd){
-        background-color: variables.$dark;
-        color: white
+
+            &:nth-child(odd) {
+                background-color: variables.$dark;
+                color: white
             }
-            
+
+            p {
+                text-align: left;
+                font-size: 20px;
+                margin-left: 10px;
+            }
+
+        }
+    }
+
+}
+
+.container {
+    background-color: variables.$ldlRed;
+    box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
+    margin: 0 auto;
+    margin-bottom: 3rem;
+
+    &__pagination {
+        display: flex;
+        list-style: none;
+
+        li {
+            flex: 1;
+            margin: 0px 5px;
+
+            &:first-child a {
+                width: 120px;
+            }
+
+            &:last-child a {
+                width: 100px;
+            }
+
+            &.active {
+                box-shadow: inset -3px -3px 7px #ffffff73, 
+                inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+            }
+        }
+
+        li a {
+            font-size: 18px;
+            text-decoration: none;
+            color: #4d3252;
+            height: 45px;
+            width: 55px;
+            display: block;
+            line-height: 45px;
         }
     }
 }
