--- a/styles.css
+++ b/styles.css
@@ -1006,22 +1006,59 @@ section {
 }
 .news-wrapper {
   margin: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
-.news-wrapper__news {
-  width: 100%;
+.news-wrapper ul.news-wrapper__list {
+  display: flex;
+  flex-direction: column;
 }
-.news-wrapper__news ul {
-  width: 100vw;
-}
-.news-wrapper__news li {
+.news-wrapper ul.news-wrapper__list li {
   list-style-type: none;
   padding-top: 2rem;
   padding-bottom: 2rem;
   text-decoration: underline;
 }
-.news-wrapper__news li:nth-child(odd) {
+.news-wrapper ul.news-wrapper__list li:nth-child(odd) {
   background-color: #092327;
   color: white;
+}
+.news-wrapper ul.news-wrapper__list li p {
+  text-align: left;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.container {
+  background-color: #b20838;
+  box-shadow: -3px -3px 7px rgba(255, 255, 255, 0.4509803922), 3px 3px 5px rgba(94, 104, 121, 0.288);
+  margin: 0 auto;
+  margin-bottom: 3rem;
+}
+.container__pagination {
+  display: flex;
+  list-style: none;
+}
+.container__pagination li {
+  flex: 1;
+  margin: 0px 5px;
+}
+.container__pagination li:first-child a {
+  width: 120px;
+}
+.container__pagination li:last-child a {
+  width: 100px;
+}
+.container__pagination li.active {
+  box-shadow: inset -3px -3px 7px rgba(255, 255, 255, 0.4509803922), inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+}
+.container__pagination li a {
+  font-size: 18px;
+  text-decoration: none;
+  color: #4d3252;
+  height: 45px;
+  width: 55px;
+  display: block;
+  line-height: 45px;
 }/*# sourceMappingURL=styles.css.map */
