--- a/styles.css
+++ b/styles.css
@@ -1082,6 +1082,11 @@ section {
 }
 
 .container {
+  padding: 5px;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  justify-items: center;
   background-color: #b20838;
   box-shadow: -3px -3px 7px rgba(255, 255, 255, 0.4509803922), 3px 3px 5px rgba(94, 104, 121, 0.288);
   margin: 0 auto;
@@ -1089,10 +1094,11 @@ section {
 }
 .container__pagination {
   display: flex;
+  justify-content: center;
   list-style: none;
 }
 .container__pagination li {
-  flex: 1;
+  align-self: center;
   margin: 0px 5px;
 }
 .container__pagination li:first-child a {
@@ -1101,13 +1107,24 @@ section {
 .container__pagination li:last-child a {
   width: 100px;
 }
+.container__pagination li:first-child {
+  margin: 0 15px 0 0;
+}
+.container__pagination li:last-child {
+  margin: 0 0 0 15px;
+}
 .container__pagination li.active {
   box-shadow: inset -3px -3px 7px rgba(255, 255, 255, 0.4509803922), inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+}
+.container__pagination li.active a {
+  font-size: 17px;
+  color: #6f6cde;
 }
 .container__pagination li a {
   font-size: 18px;
   text-decoration: none;
-  color: #4d3252;
+  color: #000000;
+  font-weight: bolder;
   height: 45px;
   width: 55px;
   display: block;
