--- a/partials/_hero.scss
+++ b/partials/_hero.scss
@@ -11,11 +11,35 @@
     width: 100vw;
 }
 
+
+
 .hero-image{
-    background-image: url("/sources/medias/nouvelle1.png");
-    padding: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+   
+    position:relative;
+    padding: 200px;
+    &::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-position: center;
+        background-attachment: fixed;
+        background-image: url("/sources/medias/nouvelle1.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        box-shadow: inset 0 0 30px rgba(0, 0, 0, 1);
+        filter: grayscale(100%);
+    z-index: 1; /* Make sure it sits behind the text */
+    }
+    &__text{
+        position: relative;
+        z-index: 2;
+        background-color: variables.$pink;
+        padding: 40px;
+        max-width: 800px;
+        min-width: 800px;
+    }
 }
+
