--- a/styles.css
+++ b/styles.css
@@ -320,12 +320,32 @@ section:not([name=carrousel], [name=swiper]) {
 }
 
 .hero-image {
-  background-image: url("/sources/medias/nouvelle1.png");
-  padding: 300px;
+  position: relative;
+  padding: 200px;
+}
+.hero-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-position: center;
+  background-attachment: fixed;
+  background-image: url("/sources/medias/nouvelle1.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  box-shadow: inset 0 0 30px rgb(0, 0, 0);
+  filter: grayscale(100%);
+  z-index: 1; /* Make sure it sits behind the text */
+}
+.hero-image__text {
+  position: relative;
+  z-index: 2;
+  background-color: #f8dde5;
+  padding: 40px;
+  max-width: 800px;
+  min-width: 800px;
 }
 
 .section-card {
