--- a/styles.css
+++ b/styles.css
@@ -1159,4 +1159,29 @@ section {
   width: 55px;
   display: block;
   line-height: 45px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.titreapropos h1 {
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+
+.descriptionapropos {
+  text-align: center;
+  font-size: 18px;
+}
+
+.titredescription {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.descriptionhistoire {
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
