--- a/partials/_news.scss
+++ b/partials/_news.scss
@@ -21,10 +21,12 @@
                 color: white
             }
 
-            p {
+            a {
                 text-align: left;
                 font-size: 20px;
                 margin-left: 10px;
+                cursor: pointer;
+                
             }
 
         }
