--- a/styles.css
+++ b/styles.css
@@ -160,10 +160,17 @@ section:not([name=carrousel], [name=swiper]) {
   border: none;
   cursor: pointer;
 }
+.navbar .navbar-top .cta-button:hover {
+  background: #7e082a;
+}
 .navbar .navbar-top .secondary {
   color: #b20838;
   background-color: #fdfdff;
   border: 2px solid #b20838;
+}
+.navbar .navbar-top .secondary:hover {
+  color: white;
+  background-color: #b20838;
 }
 .navbar .navbar-bottom {
   background-color: #092327;
@@ -276,10 +283,17 @@ section:not([name=carrousel], [name=swiper]) {
   margin: 10px auto;
   padding: 10px 15px;
 }
+.navbar .mobile-menu-overlay .mobile-menu-content .cta-button:hover {
+  background: #7e082a;
+}
 .navbar .mobile-menu-overlay .mobile-menu-content .secondary {
   color: #b20838;
   background-color: #fdfdff;
   border: 2px solid #b20838;
+}
+.navbar .mobile-menu-overlay .mobile-menu-content .secondary:hover {
+  color: white;
+  background-color: #b20838;
 }
 
 @media (max-width: 768px) {
@@ -873,15 +887,20 @@ section {
 
 .lutte-wrapper {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  align-items: flex-start;
+  flex-direction: row;
 }
 .lutte-wrapper__left-section {
-  flex: 1;
-  max-width: 400px;
+  width: 50vw;
+}
+.lutte-wrapper__right-section {
+  width: 50%;
+  align-self: flex-end;
+}
+.lutte-wrapper__right-section img {
+  width: 100%;
 }
 .lutte-wrapper__fight-list {
+  width: 100%;
   list-style-type: none;
   padding: 0;
   margin: 20px 0;
@@ -896,8 +915,6 @@ section {
   background-color: #e2ded4;
   padding: 10px;
   text-decoration: none;
-  width: 40vw;
-  min-width: 20vw;
   color: #333;
   font-weight: bold;
   border-left: 5px solid #e74c3c;
@@ -919,57 +936,18 @@ section {
   background-color: #e6e4e4;
 }
 .lutte-wrapper__see-more {
-  background-color: #b20838;
+  width: 100%;
   color: white;
-  padding: 10px 20px;
   border: none;
   font-size: 16px;
 }
-.lutte-wrapper__right-section {
-  flex: 1;
-  position: relative;
-}
-.lutte-wrapper__right-section img {
-  position: absolute;
-  width: 600px;
-  height: auto;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  align-self: baseline;
-}
 
-@media (min-width: 375px) {
-  .lutte-wrapper__right-section img {
-    left: 0;
-    z-index: 1;
-    top: 200px;
+@media (max-width: 768px) {
+  .lutte-wrapper__right-section {
+    display: none;
   }
-}
-@media (min-width: 768px) {
-  .lutte-wrapper__fight-list li a {
-    width: 25vw;
-    min-width: 20vw;
-  }
-  .__right-section img {
-    position: absolute;
-    width: 600px;
-    height: auto;
-    right: 0;
-    left: 100px;
-    align-self: baseline;
-    top: 170px;
-  }
-}
-@media (min-width: 1400px) {
-  .lutte-wrapper__right-section img {
-    position: absolute;
-    width: 600px;
-    height: auto;
-    right: 0;
-    left: 400px;
-    align-self: baseline;
-    top: 100px;
+  .lutte-wrapper__left-section {
+    width: 100%;
   }
 }
 .don {
@@ -1185,4 +1163,40 @@ section {
 
 .descriptionhistoire {
   text-align: center;
+}
+
+.partners-section {
+  width: 100%;
+  overflow: hidden;
+  background-color: white;
+  padding: 40px 0;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+
+.logo-slider {
+  display: flex;
+  width: 100%;
+  animation: slide 10s linear infinite;
+}
+
+.logo-slider img {
+  filter: grayscale(1);
+  height: 100px;
+  margin-right: 35px;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }/*# sourceMappingURL=styles.css.map */
