--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ section hr {
 }
 
 section:not([name=carrousel], [name=swiper]) {
+  max-width: 1900px;
   margin: auto;
   padding: 40px;
 }
@@ -894,10 +895,11 @@ section {
 }
 .lutte-wrapper__right-section {
   width: 50%;
+  height: 100%;
   align-self: flex-end;
 }
 .lutte-wrapper__right-section img {
-  width: 100%;
+  max-height: 500px;
 }
 .lutte-wrapper__fight-list {
   width: 100%;
@@ -1169,7 +1171,7 @@ section {
   width: 100%;
   overflow: hidden;
   background-color: white;
-  padding: 40px 0;
+  padding: 65px 0;
 }
 
 .logo-container {
@@ -1188,8 +1190,8 @@ section {
 
 .logo-slider img {
   filter: grayscale(1);
-  height: 100px;
-  margin-right: 35px;
+  height: 75px;
+  margin-right: 50px;
 }
 
 @keyframes slide {
