--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -3,7 +3,7 @@
 .navbar {
     width: 100vw;
     max-width:100%;
-    position: relative;
+    position: fixed;
     margin: 0;
     .navbar-top {
       display: flex;
