--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,7 +1,8 @@
 $ldlRed: #b20838;
+$ldlRedLighter: #ffc7d7;
 $white: #fdfdff;
 $dark: #092327;
-$tan: #e2ded4;
-$pink: #f8dde5;
+$tan: #e4dcca;
+$pink: #f7b9cc;
 $black:#000000;
 $whitetrans: #fdfdff5f;
