--- a/partials/_news.scss
+++ b/partials/_news.scss
@@ -5,33 +5,45 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: variables.$lightGray; // Light background for better contrast
 
     ul.news-wrapper__list {
         display: flex;
         flex-direction: column;
+    
 
         li {
             list-style-type: none;
-            padding-top: 2rem;
-            padding-bottom: 2rem;
-            text-decoration: underline;
+            margin: 1rem 0; // Add margin for spacing
+            border-radius: 1px; // Rounded corners
+            overflow: hidden; // Contain any overflow
+            transition: transform 0.3s, box-shadow 0.3s; // Smooth transitions
 
             &:nth-child(odd) {
-                background-color: variables.$dark;
-                color: white
+                background-color: variables.$dark; // Alternate background color
+                color: white;
+            }
+
+            &:hover {
+                transform: translateY(-5px); // Lift effect on hover
+                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); // Shadow effect on hover
             }
 
             a {
+                display: block;
+                padding: 1rem; // Add padding inside the link
                 text-align: left;
-                font-size: 20px;
-                margin-left: 10px;
-                cursor: pointer;
-                
-            }
+                font-size: 18px; // Slightly smaller font for links
+                color: inherit; // Inherit color from parent
+                text-decoration: none; // Remove underline
+                transition: color 0.3s; // Smooth color transition
 
+                &:hover {
+                    color: variables.$highlightColor; // Change color on hover
+                }
+            }
         }
     }
-
 }
 
 .container {
@@ -49,6 +61,7 @@
         display: flex;
         justify-content: center;
         list-style: none;
+        padding: 0;
 
 
         li {
@@ -88,6 +101,7 @@
             width: 55px;
             display: block;
             line-height: 45px;
+            margin: 0;
         }
     }
 }
