debut page equipe

--- a/wp-content/themes/theme-the-boyzs/style.scss
+++ b/wp-content/themes/theme-the-boyzs/style.scss
@@ -13,4 +13,5 @@
 @use "partials/swiper";
 @use "partials/news";
 @use "partials/about";
-@use "partials/partners"
+@use "partials/partners";
+@use "partials/equipe";
