--- a/wp-content/themes/theme-the-boyzs/partials/_base.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_base.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.posfix{
+  position: fixed;
+  z-index: 8;
+}
+
 body {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
