--- a/wp-content/themes/theme-the-boyzs/partials/_contact.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_contact.scss
@@ -1,5 +1,17 @@
-
+@use "variables";
 
 .titrecontact{
+    text-align: center;
+}
+
+.titremontreal{
+    text-align: center;
+}
+
+.titrequebec{
+    text-align: center;
+}
+
+.webquebec{
     text-align: center;
 }
